Bug 1308802: IonMonkey - Folding ToInt32 shouldn't happen for negative zero, r=nbp